<resources>
    <string name="app_name">iEventGenie</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE not supported on this device.</string>
    <string name="label_device_name">Device Name</string>
    <string name="label_device_address">Device Address</string>

    <string name="internet_unavailable">Unable to connect, Please check your internet connection !</string>

    <!-- activate event screen -->
    <string name="activate_event">ACTIVATE EVENT</string>
    <string name="my_events">MY EVENTS</string>
    <string name="events_near_me">EVENTS NEAR ME</string>
    <string name="all_event">ALL EVENTS</string>
    <string name="confirmation_ed_hint">Enter Confirmation Code</string>
    <string name="last_name_ed_hint">Enter Last Name</string>
    <string name="last_name_req_error">Last name required!</string>
    <string name="confirm_code_req_error">Confirmation Code required!</string>
    <string name="lastname_code_wrong">Lastname or confirmation code is wrong!</string>

    <!-- My Events -->
    <string name="my_events_title">My Events</string>
    <string name="active_events_tab">Active Events</string>
    <string name="past_events_tab">Past Events</string>
    <string name="pre_chkin">Pre-Checkin</string>
    <string name="succ_pre_chkin">Successfully Pre-Checked in</string>
    <string name="error_pre_chkin">Error in Pre-Check in</string>
    <string name="error_getting_details">Error in getting details!</string>
    <string name="successfull_precheckinmsg">You did Pre-Checkin for the Event</string>
    <string name="activate_bottom_tab">ACTIVATE EVENTS</string>

    <!-- Menu -->
    <string name="logout">LOGOUT</string>

    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="notification_title">Notifications</string>



</resources>
