<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/my_event_screen_color"
    >

    <include
        android:id="@+id/actionbar"
        layout="@layout/action_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/tab_div_color"
        android:weightSum="100"
        >

        <RelativeLayout
            android:id="@+id/active_event_btn"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/active_event_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:text="@string/active_events_tab"
                android:textColor="@color/tab_selected_text_color"
                />
            <View
                android:id="@+id/active_ev_tab_strip"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/orange_app_color"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/past_event_btn"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_marginLeft="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/past_event_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:text="@string/past_events_tab"
                android:textColor="@color/tab_unselected_text_color"
                />
            <View
                android:id="@+id/past_ev_tab_strip"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:background="@color/orange_app_color"
                />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/active_event_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0.5dp"
            android:divider="@color/my_event_list_div_color"
            android:layout_above="@+id/activate_event_btn"
           />

        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/past_event_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0.5dp"
            android:visibility="gone"
            android:divider="@color/my_event_list_div_color"
            android:layout_above="@+id/activate_event_btn"
            />

        <LinearLayout
            android:id="@+id/activate_event_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@android:color/white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activate_bottom_tab"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:gravity="center"
                android:background="@color/orange_app_color"
                />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
